# Hospital-Council-OpenEnv

./: .gitignore  Blog.md  Dockerfile  Hospital_Council_OpenEnv_Colab_Training.ipynb  README.md  mimic_openenv.py  requirements.txt  run_openenv_demo.py  visualize_agent_training.py
docs/: demo_video_script.md  requirement_audit_2026-04-25.md  submission_form_answers.md
docs/evidence/: demo_rollout_verified.jsonl  metrics_baseline.json  metrics_random.json  reward_comparison.md
hospital_council_env/: Dockerfile  README.md  __init__.py  augmentation.py  client.py  models.py  openenv.yaml  pyproject.toml  rubrics.py  simulator.py
hospital_council_env/server/: Dockerfile  __init__.py  app.py  hospital_council_env_environment.py  requirements.txt
hospital_council_env/training/: __init__.py  evaluate_policy.py  evaluate_remote_client.py  hf_trl_grpo_minimal.py  plot_training_run.py  policies.py  run_local_demo.py
scripts/: prepare_hf_space.ps1  upload_hf_space.ps1
