# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hospital_council_env"
version = "0.2.0"
description = "Long-horizon multi-agent hospital council environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]==0.2.3",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "datasets>=2.21.0",
    "trl>=0.19.0",
    "transformers>=4.55.0",
    "accelerate>=0.34.0",
]

[project.scripts]
server = "hospital_council_env.server.app:main"
hospital-council-demo = "hospital_council_env.training.run_local_demo:main"
hospital-council-eval = "hospital_council_env.training.evaluate_policy:main"
hospital-council-remote-eval = "hospital_council_env.training.evaluate_remote_client:main"

[tool.setuptools]
include-package-data = true
packages = ["hospital_council_env", "hospital_council_env.server", "hospital_council_env.training"]

[tool.setuptools.package-dir]
"hospital_council_env" = "."
"hospital_council_env.server" = "server"
"hospital_council_env.training" = "training"
